welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value color
  if (getCouleurSol == color.green) {avance()}
                       ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getCouleurSol == color.green) {avance()}
                                           ^SlugTracking:6: error: not found: value color
  else if (getCouleurSol != color.green) {
                            ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^SlugTracking:11: error: not found: value color
  } else if (getCouleurSol != color.green) {
                              ^SlugTracking:15: error: type mismatch;
 found   : Unit
 required: Boolean
    droite()
          ^SlugTracking:16: error: not found: value color
  } else if (getCouleurSol != color.green) {
                              ^SlugTracking:18: error: type mismatch;
 found   : Unit
 required: Boolean
    return()
          ^SlugTracking:19: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (getCouleurSol != color.green) {
         ^