welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  avance()
  if (getCouleurSol == color.green) {avance()}
  else if (getCouleurSol != color.green) {
    recule()
    droite()
    avance()
    gauche()
  } else if (getCouleurSol != color.green) {
    recule()
    gauche()
    avance()
    droite()
  } else if (getCouleurSol != color.green) {
    recule()
    return()
    avance()
   
  }
}